cluster/core/networking/traefik-forward-auth/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-forward-auth-ingress
  labels:
    app: traefik-forward-auth-ingress
spec:
  template:
    metadata:
      labels:
        name: traefik-forward-auth-ingress
        app: traefik-forward-auth-ingress
    spec:
      containers:
        - name: traefik-forward-auth-ingress
          image: thomseddon/traefik-forward-auth:2
          imagePullPolicy: Always
          ports:
            - containerPort: 4181
          resources:
            requests:
              cpu: "25m"
              memory: "25Mi"
            limits:
              cpu: "300m"
              memory: "150Mi"
